paks/elasticsearch-cluster/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: es-$(.group)
  labels:
    component: es-$(.group)
    role: client
spec:
  type: LoadBalancer
  selector:
    component: es-$(.group)
    role: client
  ports:
  - name: http
    port: 9200
    protocol: TCP
