paks/elasticsearch-cluster/ingress.yaml
$(if .domain)
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: es-$(.group)
spec:
$(if and .tls_cert .tls_key)
  tls:
    - hosts:
      - $(.domain)
      secretName: es-tls-secret-$(.group)
$(end)
  rules:
  - host: $(.domain)
    http:
      paths:
      - backend:
          serviceName: es-$(.group)
          servicePort: 9200
        path: /
$(end)
